Fix for tab overflow scrolling bug.
Scrolling tabs was causing the tab headers to scroll off.

--- a/examples/desktop/app.css
+++ b/examples/desktop/app.css
@@ -31,8 +31,11 @@ body {
 
 #tabs, #map, #results-grid{
     position: absolute;
-    overflow: auto;
     top: 75px; left: 0;
+}
+
+#map, #results-grid {
+    overflow: auto;
 }
 
 #map {
